-feature#5305: Remove files aggregate_items.php and color_templates_items.php and consolidate into their parents
-feature#5316: Allow for searching in settings/menu
-feature#5321: cli/push_out_hosts.php is deprecated, redirect to rebuild_poller.cache.php
-feature#5368: Allow all key searching calls to be delayed by defined amount
-feature: Allow messages to be popup notifications
-feature: Upgrade billboard.js to version 3.7.4
-feature: Upgrade d3.js to version 7.8.2
-feature: Upgrade ua-parser.js to version 1.0.35

1.2.25
-SECURITY#5318: Multiple minor stored XSS vulnerabilities in Cacti 1.2.24
-SECURITY#5348: Unchecked Regular expressions can lead to privilege escalation and data leakage
-issue#2959: Multi-threaded cli/rebuild_poller_cache.php, deprecated push_out_hosts.php
-issue#4045: When searching tree or list views, the URL does not update after changes
-issue#5254: Created a data source template to specify the snmp port, but it doesn't seem to work properly
-issue#5255: Data query xml path with space problem
-issue#5258: Warnings occur when installing thold plugin and as such thold will not upgrade correctly
-issue#5259: When the Data Template contains more Data Sources than the Graph Template RRDfiles won't update
-issue#5263: Warnings in Cacti log when re-indexing devices
-issue#5272: Boost continues to loose data when archive tables are missed due to overloaded MariaDB
-issue#5275: Boost stats can display odd values when running
-issue#5277: Boost should not attempt to start if there are no poller_output_boost records
-issue#5279: Rebuild poller cache does not work as expected
-issue#5282: Script ss_host_cpu.php does not work as expected when on a remote data collector with hmib enabled
-issue#5283: Trying to access array offset on value of type null in file lib/functions.php on line: 2276
-issue#5291: Error thrown when installing package
-issue#5298: Cacti cli plugin_manage.php mishandles the --plugin option