@@ -360,7 +360,7 @@ function db_get_active_replicas() {
  * @return (bool) the result of the close command
  */
 function db_close($db_conn = false) {
-	global $database_sessions, $database_default, $database_hostname, $database_port;
+	global $database_sessions, $database_default, $database_hostname, $database_port, $database_persist;
 
 	/* check for a connection being passed, if not use legacy behavior */
 	if (!is_object($db_conn)) {
@@ -371,7 +371,14 @@ function db_close($db_conn = false) {
 		}
 	}
 
-	$db_conn                                                                  = null;
+	/* forcibly close connection if not persistent */
+	if (!$database_persist) {
+		db_execute('KILL CONNECTION CONNECTIION_ID()', false, $db_conn);
+	}
+
+	/* unset the variables which should do the same */
+	$db_conn = null;
+
 	$database_sessions["$database_hostname:$database_port:$database_default"] = null;
 
 	return true;
