@@ -80,6 +80,8 @@ Cacti CHANGELOG
 -feature#5316: Allow for searching in settings/menu
 -feature#5321: cli/push_out_hosts.php is deprecated, redirect to rebuild_poller.cache.php
 -feature#5368: Allow all key searching calls to be delayed by defined amount
+-feature#5406: Cacti connection handling should forcibly close connections to work around PDO uncertainty
+-feature#5407: Add last_updated column to the boost table to increase diagnostics in Cacti
 -feature: Allow messages to be popup notifications
 -feature: Upgrade billboard.js to version 3.7.4
 -feature: Upgrade d3.js to version 7.8.2
